openapi.ymlの修正
